# jazn_latka_local

./: .gitattributes  .gitignore  ACTIVE_RUNTIME_CACHE_CONTRACT.json  AGENT.codex.md  AGENTS.chatgpt.md  AGENTS.lmstudio.md  AGENTS.md  BOOTSTRAP_JAZN_CURRENT.json  GITHUB_REPOSITORY_PLAN.json  JAZN_COMMANDS_INVENTORY_v14_8_2_6_5.md  LATKA_JAZN_v14.8.5.000-003_COMBINED.patch  LATKA_JAZN_v14.8.5.000_VERSION_TEMPLATE_RECONCILIATION.patch  LATKA_JAZN_v14.8.5.001_CURRENT_TURN_GROUNDING.patch  LATKA_JAZN_v14.8.5.002_USER_SELF_MEMORY_SPLIT.patch  LATKA_JAZN_v14.8.5.003_MANIFEST_REFRESH.patch  LATKA_JAZN_v14.8.5.004_AUDIT_CONSOLE_ENCODING_FIXED.patch  LATKA_JAZN_v14.8.5.007_AUDIT_TITLE_DIALOGUE_SMOKE_README.md  LATKA_JAZN_v14.8.5_PATCHSET_README.md  LATKA_JAZN_v14_8_3_4_092_REPORT.md  LATKA_v14_8_5_014_RECOVERY_COMMANDS.ps1  MANIFEST_CURRENT.json  MANIFEST_RUNTIME_MUTABLE.json  MEMORY_CHECKPOINT_POLICY.md  README.md  README_CHAT_HTML_7Z_IMPORT.txt  README_CURRENT_SQLITE.txt  README_MEMORY_RAW_CHAT_7Z.txt  RUNTIME_STATE.json  START_CHATGPT_FROM_HERE.txt  VERSION.txt  archive_workspace_runtime_sqlite.py  audit_memory_unification_sources.py  daemon-status.txt  main.py  plan_memory_unification.py  prepare_memory_migration_queues.py  pyproject.toml  pyrightconfig.json  review_memory_candidates.py  split_zip_sha.py  (+3 more)
docs/: ACTIVE_RUNTIME_UNPACKED_CHATGPT_GUIDE_v14_8_5_015.md  DZIENNIK_SCHEMA_v14_5_1.md  EXTERNAL_RESEARCH_TOOL_POLICY_v14_7_0.md  FUNCTION_ROUTE_CONTRACT_MATRIX_v14_8_5_016.md  IDENTITY_ORIGIN_CONTRACT.md  JAZN_VOICE_SOURCE_CONTRACT_v14_7_0.md  NLG_CONTRACT_V14_8_4.md  (+48 more)
(+566 files in other folders)
