[project]
name = "latka-jazn"
version = "14.8.6.0a0"
description = "System Jaźni - Łatka"
requires-python = ">=3.11"
dependencies = [
  "py7zr>=0.21.0",
  "tzdata>=2024.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.optional-dependencies]
polish-nlp = [
  "spacy>=3.7,<3.9",
  "morfeusz2>=1.99.15",
  "stanza>=1.8",
  "transformers>=4.40",
  "accelerate>=0.30",
  "torch>=2.2",
  "datasets>=2.19",
  "sentencepiece>=0.2",
  "tokenizers>=0.19",
  "rapidfuzz>=3.9",
  "orjson>=3.10",
  "pydantic>=2.7",
  "requests>=2.31",
  "diskcache>=5.6",
  "conllu>=4.5",
  "networkx>=3.2",
  "language-tool-python>=2.8",
]
